Fix newsletter page styling

--- a/assets/less/pages/newsletter.less
+++ b/assets/less/pages/newsletter.less
@@ -1,4 +1,10 @@
 .page-newsletter {
+  #main-content {
+    display: none;
+  }
+  .pre-footer-cover-container {
+    display: none;
+  }
   .header-separator {
     background-color: var(--color-black);
   }
