Update the SEPA message in donor help (Fixes #699)

--- a/assets/less/pages/donations-help.less
+++ b/assets/less/pages/donations-help.less
@@ -9,9 +9,11 @@
       padding-inline: 0;
     }
   }
+
   .intro {
     font-size: var(--font-body);
   }
+
   .container {
     gap: 1rem;
 
@@ -39,6 +41,20 @@
     .wFormContainer .wForm form {
       padding: 0;
     }
+  }
+
+  .unstyled-list {
+    list-style: none !important;
+    padding-left: 0 !important;
+    margin-left: 0 !important;
+
+    & li {
+      list-style: none !important;
+    }
+  }
+
+  .address-list {
+    margin-top: 0;
   }
 
   // Steal this from start for now
