--- a/assets/less/appeals/dec24.less
+++ b/assets/less/appeals/dec24.less
@@ -182,7 +182,7 @@
   main {
     padding: 1em;
     margin: 0 auto;
-    max-width: 787px;
+    max-width: 60.26125rem;
     position: relative;
   }
 
