--- a/assets/less/appeals/dec24.less
+++ b/assets/less/appeals/dec24.less
@@ -23,12 +23,16 @@
 
   --txt: var(--color-appeal-txt);
   --shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+
+  --font-content: Open Sans, system-ui, sans-serif;
+
 }
 
 // Scope to just the appeal page
 .page-appeal-dec24 {
 
   body {
+    font-family: var(--font-content);
     background: linear-gradient(180deg, rgba(115, 139, 132, 0) 0%, #425B55 29.5%);
     padding: 10rem 0 0 0;
     margin: 0;
@@ -180,6 +184,7 @@
   }
 
   main {
+    font-family: var(--font-content);
     padding: 1em;
     margin: 0 auto;
     max-width: 60.26125rem;
@@ -187,6 +192,14 @@
   }
 
   #appeal-body {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    box-sizing: border-box;
+    align-items: center;
+    text-align: left;
+
     font-size: 1.3125rem;
     font-weight: 400;
     line-height: 1.5;
@@ -203,6 +216,7 @@
 
 
     p {
+      width: 100%;
       margin: 0 0 1.96875rem; // 1.5 font-size
     }
 
