Vertically center heart svg

--- a/assets/less/appeals/dec24.less
+++ b/assets/less/appeals/dec24.less
@@ -268,7 +268,9 @@
 
   .heart-svg {
     position: relative;
-    top: -0.25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
   }
 
   .line {
