--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -33,7 +33,6 @@
           <li><a href="{{ url('thunderbird.about') }}" class="dotted">{{_('Who We Are')}}</a></li>
           <li><a href="{{ url('thunderbird.contact') }}" class="dotted">{{_('Contact Us')}}</a></li>
           <li><a href="{{ url('mozorg.careers.tb') }}" class="dotted">{{_('Careers')}}</a></li>
-          <li><a href="{{ url('thunderbird.privacy') }}" class="dotted">{{_('Thunderbird Privacy')}}</a></li>
         </ul>
       </div>
       <div class="site-link-section">
@@ -49,8 +48,8 @@
         {{ svg('Mozilla_Logo') }}
       </a>
       <div class="legal-links">
-        <a href="{{ url('privacy') }}" data-link-type="footer"
-        data-link-name="Privacy">{{ _('Privacy') }}</a>
+        <a href="{{ url('thunderbird.privacy') }}" data-link-type="footer"
+        data-link-name="Privacy">{{ _('Privacy Policy') }}</a>
         <a href="{{ url('privacy.notices.websites') }}" data-link-type="footer"
           data-link-name="Cookies">{{ _('Cookies') }}</a>
         <a href="{{ url('legal.index') }}" data-link-type="footer"
