Adds, styles sidebar link to mozilla privacy page

--- a/assets/less/pages/privacy.less
+++ b/assets/less/pages/privacy.less
@@ -7,6 +7,18 @@
     max-inline-size: 90%;
     text-align: left;
   }
+  .sidebar {
+    align-self: flex-start;
+    margin: 1.8rem 0;
+    padding: 0;
+    width: 100%;
+    ul {
+      margin: 0;
+      padding: 0;
+    }
+    li {
+      list-style-type: none;
+      padding: .67rem 1rem .67rem 0;
+    }
+  }
 }
-
-
