--- a/assets/less/appeals/dec24.less
+++ b/assets/less/appeals/dec24.less
@@ -158,6 +158,7 @@
     font-size: 1.25rem;
     font-weight: 700;
     color: var(--txt);
+    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
 
     & > span {
       margin-top: -.2rem;
