Make donation button overlap appeal body

--- a/assets/less/appeals/dec24.less
+++ b/assets/less/appeals/dec24.less
@@ -194,8 +194,12 @@
   }
 
   #appeal-body {
-
     box-sizing: border-box;
+
+    @media (min-width: @lg) {
+      margin-top: -5.7rem;
+    }
+
     &:before,
     &:after {
       content: '';
