--- a/assets/less/appeals/dec24.less
+++ b/assets/less/appeals/dec24.less
@@ -150,7 +150,8 @@
       font-size: 2rem;
     }
     @media (min-width: @lg) {
-      padding: 2.25rem 2rem 1rem 2rem;
+      padding: 2.25rem 2rem 1rem 3.0rem;
+      margin: -1.8rem 0;
     }
 
     text-transform: uppercase;
