Fix-up lg - xl media breakpoint for dec24 appeal.

--- a/assets/less/appeals/dec24.less
+++ b/assets/less/appeals/dec24.less
@@ -81,9 +81,11 @@
       background: none;
     }
 
-    @media (min-width: @lg) {
+    @media (min-width: @xl) {
       background-size: contain;
+    }
 
+    @media (min-width: @lg) {
       flex-direction: row;
       height: 32.25rem;
       header {
