For participate add some logic to open accordions on a fragment match (Fixes #743)

--- a/assets/less/pages/participate.less
+++ b/assets/less/pages/participate.less
@@ -87,4 +87,9 @@
       text-decoration-style: dotted;
     }
   }
+
+  .anchor-link {
+    position: relative;
+    top: calc(-1 * var(--nav-height));
+  }
 }
